@@ -1,6 +1,8 @@
 # build properties for build-a-molecule
 project.depends.data=data
 project.depends.source=src
-project.depends.lib=phetcommon piccolo-phet chemistry jmol
+
+# with the current filesize, we could add the kitchen sink too!
+project.depends.lib=phetcommon piccolo-phet chemistry jmol games
 project.flavor.build-a-molecule.mainclass=edu.colorado.phet.buildamolecule.BuildAMoleculeApplication
 project.flavor.build-a-molecule.args=
