@@ -1,3 +1,4 @@
+Added game-ding sound on collection box filled, with a sound on/off panel
 Improved kit-generation algorithm
 Added 3d button to the collection boxes
 Dragged atom/molecule always in front of other atoms/molecules
